# PaddleHelix

apps/protein_folding/helixfold3/: FOLDING.md  README.md  inference.py  pyproject.toml  setup_env.sh
apps/protein_folding/helixfold3/data/: demo_3fap_protein_sm.json  demo_4Fe-4S.json  demo_6zcy_smiles.json  demo_7s69_coval.json  demo_7u7w_protein_nucleic.json  demo_7u7w_protein_nucleic_sm.json  demo_E2-Ub.json  demo_disulf.json  demo_disulf_homodimer.json  demo_p450_heme.json  demo_p450_heme_coval.json  demo_p450_heme_sdf.json  demo_p450_heme_smiles.json  demo_pUb.json  demo_pUb_modres.json  demo_pUb_modres_typ.json  demo_phos.json  typ.mol2
apps/protein_folding/helixfold3/helixfold/: inference.py
apps/protein_folding/helixfold3/helixfold/common/: all_atom_pdb_save.py
apps/protein_folding/helixfold3/helixfold/config/: helixfold.yaml
apps/protein_folding/helixfold3/helixfold/data/: mmcif_parsing_paddle.py  pipeline_conf_bonds.py  pipeline_multimer_parallel.py  pipeline_parallel.py  pipeline_residue_replacement.py  pipeline_token_feature.py  templates.py
apps/protein_folding/helixfold3/helixfold/infer_scripts/: feature_processing_aa.py  preprocess.py
apps/protein_folding/helixfold3/helixfold/model/: config.py  modules_all_atom.py
apps/protein_folding/helixfold3/helixfold/utils/: feature_processing_aa.py  model.py  preprocess.py
apps/protein_folding/helixfold3/infer_scripts/: feature_processing_aa.py  preprocess.py
apps/protein_folding/helixfold3/infer_scripts/tools/: mmcif_writer.py
apps/protein_folding/helixfold3/utils/: model.py
(+2 files in other folders)
