[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "helixfold"
version = "3.0.0"
description = "Code for helixfold v3"
authors = ["Name <email@address>"]

readme = "README.md"
license = "MIT"
repository = "https://github.com/PaddlePaddle/PaddleHelix/blob/dev/apps/protein_folding/helixfold3"
classifiers = [
    "Topic :: Scientific/Engineering :: Biochemistry",
    "Topic :: Scientific/Engineering :: Protein Engineering"
]


packages = [
    { include = "helixfold" },
    { include = "helixfold/*.py" },
]


[tool.poetry.dependencies]
python = "^3.8" 

absl-py = "0.13.0"
biopython = "1.79"
chex = "0.0.7"
dm-haiku = "0.0.4"
dm-tree = "0.1.6"
docker = "5.0.0"
immutabledict = "2.0.0"
jax = "0.2.14"
ml-collections = "0.1.0"
pandas = "1.3.4"
scipy = "1.9.0"
rdkit-pypi = "2022.9.5"
posebusters = "*" 
hydra-core= "^1.3.2"
omegaconf = "^2.3.0"
joblib = "1.4.2"



[tool.poetry.scripts]
helixfold = 'helixfold.inference:main'
